--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -1,16 +1,36 @@
 <div class="container">
-    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-        <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-        <span class="fs-4">Stage de Paolo</span>
-      </a>
+	<header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+		<a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+			<svg class="bi me-2" width="40" height="32">
+				<use xlink:href="#bootstrap"></use>
+			</svg>
+			<span class="fs-4">Stage de Paolo</span>
+		</a>
 
-      <ul class="nav nav-pills">
-        <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-      </ul>
-    </header>
-  </div>
+		<ul class="nav nav-pills">
+			<li class="nav-item">
+				<a href="#" class="nav-link active" aria-current="page">Home</a>
+			</li>
+			<li class="nav-item">
+				<a href="#" class="nav-link">Features</a>
+			</li>
+			<li class="nav-item">
+				<a href="#" class="nav-link">Pricing</a>
+			</li>
+			<li class="nav-item">
+				<a href="#" class="nav-link">FAQs</a>
+			</li>
+			<li class="nav-item">
+				<a href="#" class="nav-link">About</a>
+			</li>
+		</ul>
+	</header>
+</div>
+{% for label, messages in app.flashes %}
+	<div class="alert alert-{{ label }} alert-dismissible fade show" role="alert">
+		{% for message in messages %}
+			<p>{{ message }}</p>
+		{% endfor %}
+		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+	</div>
+{% endfor %}
