--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -4,6 +4,7 @@
 			<svg class="bi me-2" width="40" height="32">
 				<use xlink:href="#bootstrap"></use>
 			</svg>
+			<img src="" alt="">
 			<span class="fs-4">Stage de Paolo</span>
 		</a>
 
