--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -5,89 +5,117 @@
 
 {% block body %}
 
- <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
+	<style>
+		body {
+			font-family: Arial, sans-serif;
+			margin: 20px;
+		}
 
-        .car-container {
-            max-width: 800px;
-            margin: 0 auto;
-        }
+		.car-container {
+			max-width: 800px;
+			margin: 0 auto;
+		}
 
-        .car-image {
-            max-width: 100%;
-            height: auto;
-        }
+		.car-image {
+			max-width: 100%;
+			height: auto;
+		}
 
-        .car-details {
-            margin-top: 20px;
-        }
+		.car-details {
+			margin-top: 20px;
+		}
 
-        .contact-form {
-            margin-top: 30px;
-        }
+		.contact-form {
+			margin-top: 30px;
+		}
 
-        label {
-            display: block;
-            margin-bottom: 8px;
-        }
+		label {
+			display: block;
+			margin-bottom: 8px;
+		}
 
-        input, textarea {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 15px;
-            box-sizing: border-box;
-        }
+		input,
+		textarea {
+			width: 100%;
+			padding: 10px;
+			margin-bottom: 15px;
+			box-sizing: border-box;
+		}
 
-        button {
-            background-color: #4CAF50;
-            color: white;
-            padding: 12px 20px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-    </style>
+		button {
+			background-color: #4CAF50;
+			color: white;
+			padding: 12px 20px;
+			border: none;
+			border-radius: 4px;
+			cursor: pointer;
+		}
+	</style>
 </head>
 <body>
 
-<div class="car-container">
-    <img class="car-image" src="car_image.jpg" alt="Car Image">
-    <div class="car-details">
-        <h2>{{ product.titre }}</h2>
-        <p>{{ product.description}}</p>
-        <p>Mileage: 20,000 miles</p>
-    </div>
 
-    <div class="contact-form">
-        <h3>Contact the Garage</h3>
- {{ form_start(form) }}
-     <div class="my-custom-class-for-errors">
-        {{ form_errors(form) }}
-    </div>
-<div class="h4">
-{{ form_widget(form.sujet) }}
-            {# {{ form_row(form.sujet) }} #}
-</div>
+	<div class="car-container">
+		<img class="img-fluid w-100" src="/assets/{{product.id}}/{{product.id}}.jpg" alt="Car Image">
 
-   <div class="row">
-        <div class="col">
+		<div class="car-details">
+			<h2>{{ product.titre }}</h2>
+			<p>{{ product.description}}</p>
+			<p>Mileage: 20,000 miles</p>
+		</div>
+
+		<h3>Gallery</h3>
         
-            {{ form_row(form.fname) }}
-        </div>
-        <div class="col" id="">
-            {{ form_row(form.lname) }}
-        </div>
-    </div>
+		{% for file in finder %}
+	
+			<img
+			src="/assets/{{product.id}}/{{file.relativePathname}}" alt="" class="img-thumbnail" style="width: 200px" data-bs-toggle="modal" data-bs-target="#exampleModal{{loop.index}}">
+			<!-- Modal -->
+			<div class="modal fade" id="exampleModal{{loop.index}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+				<div class="modal-dialog" id="{{loop.index}}">
+					<div class="modal-content">
+						<div class="modal-header">
+							<h1 class="modal-title fs-5" id="exampleModalLabel">{{product.titre}}</h1>
+							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+						</div>
+						<div class="modal-body">
+							<img src="/assets/{{product.id}}/{{file.relativePathname}}" alt="" class="img-fluid">
+						</div>
+
+					</div>
+				</div>
+			</div>
+
+		{% else %}
+			No services have been found.
+		{% endfor %}
+
+		<div class="contact-form">
+			<h3>Contact the Garage</h3>
+			{{ form_start(form) }}
+			<div class="my-custom-class-for-errors">
+				{{ form_errors(form) }}
+			</div>
+			<div class="h4">
+				{{ form_widget(form.sujet, { 'attr': {'class': 'd-none'}}) }}
+
+				{# {{ form_row(form.sujet) }} #}
+			</div>
+
+			<div class="row">
+				<div class="col">
+
+					{{ form_row(form.fname) }}
+				</div>
+				<div class="col" id="">
+					{{ form_row(form.lname) }}
+				</div>
+			</div>
 
 
- {{ form_end(form) }}
+			{{ form_end(form) }}
 
-    </div>
-</div>
-<div class="container">
-</div>
-</body>
-{% endblock %}
+		</div>
+	</div>
+	<div class="container"></div>
+</body>{% endblock %}
